--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
 - template: .azure-pipelines/build.yml
   parameters:
     arch: amd64
-    pool:
+    pool: 'Ubuntu-amdx64-pool'
       vmImage: 'ubuntu-20.04'
     codeCoverage: true
     containerImage: sonicdev-microsoft.azurecr.io:443/sonic-slave-bullseye:latest
